apps/contextapi/overlays/development/deployment-resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contextapi
spec:
  template:
    spec:
      containers:
        - name: node # Name of the container to patch
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
