apps/contextapi/overlays/development/contextapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contextapi # Name can remain contextapi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: dev.app.contextsuite.com # Updated host
      http:
        paths:
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /stats
            pathType: Prefix
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /context
            pathType: Prefix
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /graph
            pathType: Prefix
  tls:
    - hosts:
        - dev.app.contextsuite.com # Updated host for TLS
      secretName: contextapi-dev-tls # Updated secretName
